# ci-carbon-tracker

./: .cicarbon.json  .gitignore  Dockerfile  LICENSE  README.md  carbon-history-local.csv  carbon-history.csv  hello_world.py  main.py  pyproject.toml  report.py  test_local.sh
.github/workflows/: carbon-tracker-container.yaml  carbon-tracker.yml
docs/: PLAN.md
start/: action.yml  tracker.py
stop/: action.yml  report.py  wait_for_runs.py
stop/templates/: pr-summary-row.md  pr-summary.md  report.md  suggestions.md  workflow-breakdown.md  workflow-row.md
tests/: Dockerfile.test
